# robotfindskitten

./: .gitignore  AUTHORS  BUGS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  RELEASE  config.h.in  configure  configure.in  make  messages.h  messages.h-731  non_kitten_items.h  robotfindskitten.c
doc/: Makefile.in  robotfindskitten.6  robotfindskitten.info  robotfindskitten.texi
nki/: Makefile  Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  robotfindskitten.c
